--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -10,8 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import sklearn"
+    "import seaborn as sns"
    ]
   },
   {
@@ -1966,7 +1965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1980,11 +1979,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "53ec2a3048e77ac3f83e5c1557cb43dab32366ca26fbc4e22397ae976fa7e6f4"
+    "hash": "9fb94b50c46c685b7506fefae97e4d9585823532cbe4f3ee69c39dd86ed77763"
    }
   }
  },
